--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,36 @@ body {
 .card {
   width: 400px;
   background: #fff;
+  padding:8px;
   margin: 16px auto;
+  border: 5px solid #fff;
 }
 
 .title {
   background: #e3f4ff;
+  margin:8px auto;
+  padding:8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin:8px auto;
+  padding:8px;
 }
 
 .button-container {
+  display:block;
   background: #e3f4ff;
+  border: 2px solid #fff;
+  text-align:center;
+  margin:8px auto;
+  padding:8px;
 }
 
 button {
+  display:block;
+  text-align:center;
+  margin:2px auto;
   background: white;
   border: 1px solid #eee;
 }
